Add secure password recovery
